@@ -6,9 +6,11 @@ import static org.testng.internal.Utils.isStringNotEmpty;
 
 import java.lang.reflect.Constructor;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.ServiceLoader;
 
+import java.util.function.BiPredicate;
 import org.testng.annotations.Guice;
 import org.testng.collections.Lists;
 import org.testng.internal.ClassHelper;
@@ -41,24 +43,26 @@ public class GuiceHelper {
     }
     Injector parentInjector = ((ClassImpl) iClass).getParentInjector(injectorFactory);
 
-    List<Module> moduleInstances =
-        Lists.newArrayList(getModules(guice, parentInjector, iClass.getRealClass()));
+    List<Module> classLevelModules = getModules(guice, parentInjector, iClass.getRealClass());
     Module parentModule = getParentModule(context);
     if (parentModule != null) {
-      moduleInstances.add(parentModule);
+      context.addGuiceModule(parentModule);
+      BiPredicate<Module, Module> condition = (m,n) -> m.getClass().equals(n.getClass());
+      classLevelModules = Lists.merge(classLevelModules, Collections.singletonList(parentModule), condition);
     }
-    List<Module> moduleLookup = Lists.newArrayList(moduleInstances);
+    List<Module> moduleLookup = Lists.newArrayList(classLevelModules);
 
     // Get an injector with the class's modules + any defined parent module installed
     // Reuse the previous injector, if any, but don't create a child injector as JIT bindings can conflict
     Injector injector = context.getInjector(moduleLookup);
     if (injector == null) {
-      injector = createInjector(context, injectorFactory, moduleInstances);
-      context.addInjector(moduleInstances, injector);
+      injector = createInjector(context, injectorFactory, classLevelModules);
+      context.addInjector(classLevelModules, injector);
     }
     return injector;
   }
 
+  @SuppressWarnings("unchecked")
   private static Module getParentModule(ITestContext context) {
     if (isStringEmpty(context.getSuite().getParentModule())) {
       return null;
@@ -71,50 +75,49 @@ public class GuiceHelper {
     if (!Module.class.isAssignableFrom(parentModule)) {
       throw new TestNGException("Provided class is not a Guice module: " + parentModule.getName());
     }
+    if (!context.getGuiceModules((Class<? extends Module>) parentModule).isEmpty()) {
+      return context.getGuiceModules((Class<? extends Module>) parentModule).get(0);
+    }
+    Module obj;
     try {
       Constructor<?> moduleConstructor = parentModule.getDeclaredConstructor(ITestContext.class);
-      return (Module)InstanceCreator.newInstance(moduleConstructor, context);
+      obj = (Module) InstanceCreator.newInstance(moduleConstructor, context);
     } catch (NoSuchMethodException e) {
-      return (Module)InstanceCreator.newInstance(parentModule);
+      obj = (Module) InstanceCreator.newInstance(parentModule);
     }
-  }
-
-  /**
-   * @param context The test context
-   * @param moduleInstances The modules
-   * @return The Injector
-   * @deprecated - This method stands deprecated as of 7.0.1
-   */
-  @Deprecated
-  public static Injector createInjector(ITestContext context, List<Module> moduleInstances) {
-    return createInjector(context, com.google.inject.Guice::createInjector, moduleInstances);
+      context.addGuiceModule(obj);
+    return obj;
   }
 
   public static Injector createInjector(ITestContext context,
       IInjectorFactory injectorFactory, List<Module> moduleInstances) {
     Module parentModule = getParentModule(context);
+    BiPredicate<Module, Module> condition = (m,n) -> m.getClass().equals(n.getClass());
     List<Module> fullModules = Lists.newArrayList(moduleInstances);
     if (parentModule != null) {
-      fullModules.add(parentModule);
+      fullModules = Lists.merge(fullModules, Collections.singletonList(parentModule), condition);
     }
     Stage stage = Stage.DEVELOPMENT;
     String stageString = context.getSuite().getGuiceStage();
     if (isStringNotEmpty(stageString)) {
       stage = Stage.valueOf(stageString);
     }
+    fullModules.forEach(context::addGuiceModule);
     return injectorFactory.getInjector(stage, fullModules.toArray(new Module[0]));
   }
 
   private List<Module> getModules(Guice guice, Injector parentInjector, Class<?> testClass) {
     List<Module> result = Lists.newArrayList();
+    BiPredicate<Module, Module> condition = (m,n) -> m.getClass().equals(n.getClass());
     for (Class<? extends Module> moduleClass : guice.modules()) {
       List<Module> modules = context.getGuiceModules(moduleClass);
       if (modules != null && !modules.isEmpty()) {
         result.addAll(modules);
+        result = Lists.merge(result, modules, condition);
       } else {
         Module instance = parentInjector.getInstance(moduleClass);
-        result.add(instance);
-        context.getGuiceModules(moduleClass).add(instance);
+        result = Lists.merge(result, Collections.singletonList(instance), condition);
+        context.addGuiceModule(instance);
       }
     }
     Class<? extends IModuleFactory> factory = guice.moduleFactory();
@@ -122,10 +125,11 @@ public class GuiceHelper {
       IModuleFactory factoryInstance = parentInjector.getInstance(factory);
       Module module = factoryInstance.createModule(context, testClass);
       if (module != null) {
-        result.add(module);
+        result = Lists.merge(result, Collections.singletonList(module), condition);
       }
     }
-    result.addAll(LazyHolder.getSpiModules());
+    result = Lists.merge(result, LazyHolder.getSpiModules(), condition);
+    result = Lists.merge(result, context.getGuiceModules(), condition);
     return result;
   }
 
