@@ -5,6 +5,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.function.BiPredicate;
 import java.util.stream.Collectors;
 
 public final class Lists {
@@ -45,6 +46,25 @@ public final class Lists {
   public static <K> List<K> merge(Collection<K> l1, Collection<K> l2) {
     List<K> result = newArrayList(l1);
     result.addAll(l2);
+    return result;
+  }
+
+  /**
+   * Utility method that merges two lists by applying the provided condition.
+   * @param l1 - The first list
+   * @param l2 - The second list which is to be merged into the first list
+   * @param condition - The condition that is used to determine if an element is to be added or not.
+   * @param <T> - The generic type
+   * @return - The merged list.
+   */
+  public static <T> List<T> merge(List<T> l1, List<T> l2, BiPredicate<T, T> condition) {
+    List<T> result = newArrayList(l1);
+    for (T eachL1 : l2) {
+      boolean exists = l1.stream().anyMatch(e -> condition.test(e, eachL1));
+      if (!exists) {
+        result.add(eachL1);
+      }
+    }
     return result;
   }
 }
